add logic to add books

--- a/pages/books/books.html
+++ b/pages/books/books.html
@@ -27,6 +27,13 @@
           <nav class="nav">
             <button class="nav__toggle" aria-expanded="false" type="button">menu</button>
             <ul class="nav__wrapper">
+              <li class="nav__item">
+                <a href="../../index.html">
+                  <img src="../../images/home.svg" alt="" />
+                  <span>Home</span>
+                </a>
+              </li>
+
               <li class="nav__item active">
                 <a href="#">
                   <img src="../../images/books.svg" alt="" />
@@ -74,7 +81,7 @@
           <option value="author3">Author 3</option>
         </select>
 
-        <button class="books-page__button">Add book</button>
+        <button class="books-page__button add-book__add">Add book</button>
       </section>
 
       <section class="books">
@@ -94,7 +101,7 @@
 
           <span class="book__author">Jane Austen</span>
 
-          <button class="books-page__button">Remove book</button>
+          <button class="books-page__button book__remove">Remove book</button>
         </div>
       </section>
     </main>
