--- a/pages/books/books.html
+++ b/pages/books/books.html
@@ -90,16 +90,16 @@
             <img src="../../images/book_4.jpg" alt="" />
           </div>
 
-          <span class="book__title">Sense and Sensibility</span>
+          <span class="book__title clm2">Sense and Sensibility</span>
 
-          <div class="book__synopsis">
+          <div class="book__synopsis clm3">
             <p>
-              Sense and Sensibility is a novel by Jane Austen, published in 1811. It was published anonymously; By A Lady
-              appears on the title page where the author
+              Sense and Sensibility is a novel by Jane Austen, published in 1811. It was published anonymously; By A
+              Lady appears on the title page where the author
             </p>
           </div>
 
-          <span class="book__author">Jane Austen</span>
+          <span class="book__author clm4">Jane Austen</span>
 
           <button class="books-page__button book__remove">Remove book</button>
         </div>
