--- a/pages/books/books.html
+++ b/pages/books/books.html
@@ -15,17 +15,9 @@
           <a href="../../index.html" class="brand">Books project</a>
         </div>
 
-        <div class="search">
-          <button class="search__toggle" aria-label="Open search">Search</button>
-          <form class="search__form" action="">
-            <label class="sr-only" for="search">Search</label>
-            <input type="search" name="" id="search" placeholder="Search for the book" />
-          </form>
-        </div>
-
         <div class="site-header__end">
           <nav class="nav">
-            <button class="nav__toggle" aria-expanded="false" type="button">menu</button>
+            <button class="nav__toggle btn" aria-expanded="false" type="button">menu</button>
             <ul class="nav__wrapper">
               <li class="nav__item">
                 <a href="../../index.html">
@@ -62,7 +54,7 @@
 
     <main class="wrapper books-page" style="opacity: 1">
       <section class="add-book">
-        <button class="books-page__button add-book__upload-image">Add cover</button>
+        <button class="books-page__button add-book__upload-image btn">Add cover</button>
 
         <input type="text" placeholder="Title" class="add-book__title" />
 
@@ -81,7 +73,7 @@
           <option value="author3">Author 3</option>
         </select>
 
-        <button class="books-page__button add-book__add">Add book</button>
+        <button class="books-page__button add-book__add btn">Add book</button>
       </section>
 
       <section class="books">
@@ -101,7 +93,7 @@
 
           <span class="book__author clm4">Jane Austen</span>
 
-          <button class="books-page__button book__remove">Remove book</button>
+          <button class="books-page__button book__remove btn">Remove book</button>
         </div>
       </section>
     </main>
