--- a/pages/users/users.html
+++ b/pages/users/users.html
@@ -15,17 +15,9 @@
           <a href="../../index.html" class="brand">Books project</a>
         </div>
 
-        <div class="search">
-          <button class="search__toggle" aria-label="Open search">Search</button>
-          <form class="search__form" action="">
-            <label class="sr-only" for="search">Search</label>
-            <input type="search" name="" id="search" placeholder="Search for the book" />
-          </form>
-        </div>
-
         <div class="site-header__end">
           <nav class="nav">
-            <button class="nav__toggle" aria-expanded="false" type="button">menu</button>
+            <button class="nav__toggle btn" aria-expanded="false" type="button">menu</button>
             <ul class="nav__wrapper">
               <li class="nav__item">
                 <a href="../../index.html">
@@ -62,7 +54,7 @@
 
     <main class="wrapper users-page">
       <section class="add-user">
-        <button class="users-page__button add-user__upload-image">Add avatar</button>
+        <button class="users-page__button add-user__upload-image btn">Add avatar</button>
 
         <input type="text" placeholder="Name" class="add-user__name" />
 
@@ -73,7 +65,7 @@
           <option value="admin">Admin</option>
         </select>
 
-        <button class="users-page__button add-user__add">Add user</button>
+        <button class="users-page__button add-user__add btn">Add user</button>
       </section>
 
       <section class="users">
@@ -93,7 +85,7 @@
 
           <span class="user__author clm4">admin</span>
 
-          <button class="users-page__button user__remove">Remove user</button>
+          <button class="users-page__button user__remove btn">Remove user</button>
         </div>
       </section>
     </main>
