--- a/pages/bookmarks/bookmarks.html
+++ b/pages/bookmarks/bookmarks.html
@@ -14,17 +14,9 @@
           <a href="../../index.html" class="brand">Books project</a>
         </div>
 
-        <div class="search">
-          <button class="search__toggle" aria-label="Open search">Search</button>
-          <form class="search__form" action="">
-            <label class="sr-only" for="search">Search</label>
-            <input type="search" name="" id="search" placeholder="Search for the book" />
-          </form>
-        </div>
-
         <div class="site-header__end">
           <nav class="nav">
-            <button class="nav__toggle" aria-expanded="false" type="button">menu</button>
+            <button class="nav__toggle btn" aria-expanded="false" type="button">menu</button>
             <ul class="nav__wrapper">
               <li class="nav__item">
                 <a href="../../index.html">
