--- a/pages/bookmarks/bookmarks.html
+++ b/pages/bookmarks/bookmarks.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="../../images/bookmarks.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Users</title>
+    <title>Bookmarks</title>
     <script type="module" src="../../scripts/imports.js"></script>
+    <script type="module" src="./bookmarks.js"></script>
   </head>
   <body>
     <header class="site-header">
@@ -51,9 +52,9 @@
       </div>
     </header>
 
-    <main class="wrapper">
-      <section class="users">
-        <div class="user"></div>
+    <main class="wrapper bookmarks-page">
+      <section class="books">
+        <div class="book"></div>
       </section>
     </main>
 
