add classes to links

--- a/pages/users/users.html
+++ b/pages/users/users.html
@@ -19,28 +19,28 @@
           <nav class="nav">
             <button class="nav__toggle btn" aria-expanded="false" type="button">menu</button>
             <ul class="nav__wrapper">
-              <li class="nav__item">
+              <li class="nav__item home-link">
                 <a href="../../index.html">
                   <img src="../../images/home.svg" alt="" />
                   <span>Home</span>
                 </a>
               </li>
 
-              <li class="nav__item">
+              <li class="nav__item books-link">
                 <a href="/pages/books/books.html">
                   <img src="../../images/books.svg" alt="" />
                   <span>Books</span>
                 </a>
               </li>
 
-              <li class="nav__item">
+              <li class="nav__item bookmarks-link">
                 <a href="/pages/bookmarks/bookmarks.html">
                   <img src="../../images/bookmarks.svg" alt="" />
                   <span>Bookmarks</span>
                 </a>
               </li>
 
-              <li class="nav__item active">
+              <li class="nav__item users-link active">
                 <a href="#">
                   <img src="../../images/users.svg" alt="" />
                   <span>Users</span>
