--- a/index.html
+++ b/index.html
@@ -19,35 +19,35 @@
           <nav class="nav">
             <button class="nav__toggle btn" aria-expanded="false" type="button">menu</button>
             <ul class="nav__wrapper">
-              <li class="nav__item active">
+              <li class="nav__item active home-link">
                 <a href="#">
                   <img src="./images/home.svg" alt="" />
                   <span>Home</span>
                 </a>
               </li>
 
-              <li class="nav__item">
+              <li class="nav__item books-link">
                 <a href="./pages/books/books.html">
                   <img src="./images/books.svg" alt="" />
                   <span>Books</span>
                 </a>
               </li>
 
-              <li class="nav__item">
+              <li class="nav__item bookmarks-link">
                 <a href="./pages/bookmarks/bookmarks.html">
                   <img src="./images/bookmarks.svg" alt="" />
                   <span>Bookmarks</span>
                 </a>
               </li>
 
-              <li class="nav__item">
+              <li class="nav__item users-link">
                 <a href="./pages/users/users.html">
                   <img src="./images/users.svg" alt="" />
                   <span>Users</span>
                 </a>
               </li>
 
-              <li class="nav__item nav__auth">
+              <li class="nav__item nav__auth auth-link">
                 <a href="#">
                   <img src="./images/key.svg" alt="" />
                   <span>Auth</span>
