--- a/index.html
+++ b/index.html
@@ -102,12 +102,15 @@
         </div>
         <div class="books"></div>
       </section>
+
       <div class="overlay">
         <div class="modal modal-auth">
-          <input type="text" placeholder="Login">
+          <input type="text" placeholder="Login" class="name">
+          <input type="text" placeholder="Password" class="password">
           <div class="modal__buttons">
             <button class="btn close">Close</button>
-            <button class="btn login">Sign in</button>
+            <button class="btn btn-register">Sign up</button>
+            <button class="btn btn-login">Sign in</button>
           </div>
         </div>
 
